--- a/cssthemes/apexapp/index.html
+++ b/cssthemes/apexapp/index.html
@@ -201,7 +201,7 @@
 			</div>
 		</section>
 		<!-- End Feature -->
-		<div class="tlinks">Collect from <a href="http://www.cssmoban.com/" >建站模板</a></div>
+		<div class="tlinks">Collect from <a href="http://www.77muban.com/" >建站模板</a></div>
 
 		<!-- Start Video -->
 		<section id="mu-video">
@@ -525,7 +525,7 @@
 	<footer id="mu-footer" role="contentinfo">
 			<div class="container">
 				<div class="mu-footer-area">
-					<p class="mu-copy-right">&copy; Copyright markups.io. All right reserved.More Templates <a href="http://www.cssmoban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.cssmoban.com/" title="网页模板" target="_blank">网页模板</a></p>
+					<p class="mu-copy-right">&copy; Copyright markups.io. All right reserved.More Templates <a href="http://www.77muban.com/" target="_blank" title="模板之家">模板之家</a> - Collect from <a href="http://www.77muban.com/" title="网页模板" target="_blank">网页模板</a></p>
 				</div>
 			</div>
 
